fixes thankspage so it is visible under header

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -272,6 +272,10 @@ select {
   height: 1100px;
 }
 
+#thankspage {
+  margin-top: 100px;
+}
+
 .marginAddCart {
   font-size: 20px;
   margin: 40px 0 20px 40px;
